# gcode

./: .gitignore  .gitmodules  CMakeLists.txt  Pipfile  README.md  arm-toolchain.cmake  build.sh  main.cc  run.sh  x86-toolchain.cmake
python/: generate_ascii_image.py
src/: glog.cc  glog.h  singleton.h
src/algorithm/: geometry.h
src/algorithm/optimizer/: gauss_newton.h  guass_newton.cc  optimizer.cc  optimizer.h
src/base/: allocator.cc  allocator.h  base_defines.h  data_tyep.h  gmat.cc  gmat.h  macro.h  mat.cc  mat.h  pixel.h
src/common/: gfile.cc  gfile.h  glog.cc  glog.h  gtime.cc  gtime.h  log.cc  log.h  singleton.h
src/cv/: ascii_image.h  color.h  font.h  gimage.cc  gimage.h  image.cc  image.h
src/leetcode/: leetcode.cc  leetcode.h
src/leetcode/base/: list_node.h
src/nn/: layer.cc  layer.h  model.h  options.h  param.cc  param.h
src/plot/: plot2d.cc  plot2d.h
src/util/solver/: base_solver.h
test/: singleton_test.cc
tests/: gauss_newton_test.cc  geometry_test.cc  gimage_test.cc  glog_test.cc  gmat_test.cc  gtime_test.cc  leetcode_test.cc  log_test.cc  plot_test.cc  singleton_test.cc
